# Robotica2024

./: README.md
dobot/: CMakeLists.txt  package.xml
dobot/config/: joint_group_position_controller.yaml  visualization.rviz
dobot/description/: armbot.urdf.xacro  armbot_core.xacro  inertia.xacro  joint_group_position_controller.xacro
dobot/launch/: gazebo.launch.py  joint_group_position_controller.launch.py
dobot/scripts/: gazebo_joint_group_position_publisher.py
src/description_dobotmg400_uao/: package.xml  setup.cfg  setup.py
src/description_dobotmg400_uao/launch/: display.launch.py
src/description_dobotmg400_uao/rviz/: urdf.rviz
src/description_dobotmg400_uao/urdf/: mg400_description.urdf
